# pwr-tray

./: .gitignore  README.md  deploy  pi.build  pi.spec  power-watch  pyproject.toml  recipe.yaml  runner  setup.py
my_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pwr_tray/: IniTool.py  SwayIdleMgr.py  Utils.py  YamlDump.py  main.py
pwr_tray.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pwr_tray/resources/: FullSun.kra  GoingDown.kra  LockOnlyMode.kra  New-LockOnly.kra  New-LowBattery.kra  New-NormMode.kra  SettingSun.kra  Unlocked.kra  commands.yaml  de_config.json
pwr_tray/resources/SetB/: LoBattery.kra  NormMode.kra  PresMode.kra
pwr_tray/resources/SetC/: New-PresMode.kra
src/pwr_tray/: IniTool.py  SwayIdleMgr.py  main.py
