# HOW TO DEVELOP

#
# Prep Work (ensure need modules are up-to-date):
#   sudo apt install python3-pip
#   sudo apt install python3-pip-whl
#   pip install build --break-system-packages
#   sudo apt install twine
#   -- antiquated way
#      sudo pacman -Syu python-pip
#      sudo pacman -Syu python-build
#      sudo pacman -Syu python-twine
#   -- antiquated way
#      python3 -m pip install --upgrade pip
#      python3 -m pip install --upgrade build
#      python3 -m pip install --upgrade twine
#
# Optionally, `python3 -m venv venv`, and then
#   - source env/bin/activate # to activate
#   - deactivate # to deactivate
# 
# rm -rf ./dist && python3 -m build && pip install -e . --break-system-packages
# pip-tray
#
#    -OR-
# python3 -m pwr_tray.main
#
#    -OR-
# cd pwr_tray && ./main.py
#
#    -OR-
# pwr_tray/main.py

# HOW TO PUBLISH...
# PUBLIC Build and deploy (from project directory):
#   ## BUMP the version (below in [project])
#   rm -r dist; python3 -m build; ls dist/.
#   python3 -m twine upload dist/* # keyring --disable # may be required
#     ## Enter __token__ and the saved TOKEN (in bitwarden)
#   pipx upgrade my-snaps || pipx install my-snaps # >= python3.11
#   --OR-- sudo python3 -m pip install my-snaps # <= python3.10
#   ## VISIT  https://pypi.org/project/my-snaps and delete old versions
#
# TEST Build and test (from project directory):
#   ## BUMP the version (below in [project])
#   rm -r dist; python3 -m build
#   python3 -m twine upload --repository testpypi dist/* # keyring --disable # may be required
#     ## Enter __token__ and the saved TOKEN (in bitwarden)
#   sudo python3 -m pip install --upgrade --index-url https://test.pypi.org/simple/ --no-deps --break-system-packages my-sna
#   ## VISIT  https://test.pypi.org/project/my-snaps and delete old versions

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pwr_tray"
version = "0.2"
description = "A GTK tray applet for power management for i3/sway/KDE"
authors = [
    { name = "Joe Defen", email = "joedef@google.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

keywords = ["power", "energy", "GTK", "applet", "tray", "kde", "i3wm", "sway"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
    'importlib-metadata; python_version<"3.8"',
]

[project.urls]
"Homepage" = "https://github.com/joedefen/pwr-tray"
"Bug Tracker" = "https://github.com/joedefen/pwr-tray/issues"

[project.scripts]
pwr-tray = "pwr_tray.main:main"

[tool.hatch.build.targets.wheel]
packages = ["pwr_tray"]

[tool.hatch.build.targets.sdist]
include = [
    "/pwr_tray/resources/*",
]
exclude = [
    "__pycache__",
    "*.png",
    "*.kra",
    "pwr-*.svg",
]

