[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "pwr_tray"
version = "1.0.2"
description = "A GTK tray applet for power management for i3/sway/KDE"
authors = [
    { name = "Joe Defen", email = "joedef@google.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["power", "energy", "GTK", "applet", "tray", "kde", "i3wm", "sway"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
    'importlib-metadata; python_version<"3.8"',
    'psutil>=5.9',
    'PyQt5>=5.15',
]

[project.urls]
"Homepage" = "https://github.com/joedefen/pwr-tray"
"Bug Tracker" = "https://github.com/joedefen/pwr-tray/issues"

[project.scripts]
pwr-tray = "pwr_tray.main:main"

[tool.flit.sdist]
include = ["pwr_tray/resources/"]
